[package]
name = "byor"
version = "1.0.0-beta.2"
edition = "2024"
authors = ["Devin Droddy <devin@justdeeevin.dev"]
license = "MIT"
repository = "https://github.com/justdeeevin/byor"
description = "Bring your own runtime!"
readme = "README.md"
keywords = ["agnostic", "runtime", "tokio", "smol", "futures"]
categories = [
  "asynchronous",
  "concurrency",
  "filesystem",
  "network-programming",
  "rust-patterns",
]

[dependencies]
# general
thiserror = "2.0.17"
futures-lite = { version = "2.6.1", default-features = false, features = [
  "std",
], optional = true }

# tokio
tokio = { version = "1.48.0", optional = true }
tokio-util = { version = "0.7.17", default-features = false, optional = true }
tokio-stream = { version = "0.1.17", default-features = false, optional = true }

futures = { version = "0.3.31", default-features = false, optional = true }

# smol
async-lock = { version = "3.4.2", optional = true }
async-channel = { version = "2.5.0", optional = true }
async-executor = { version = "1.14.0", optional = true }
async-fs = { version = "2.2.0", optional = true }
async-io = { version = "2.6.0", optional = true }
async-net = { version = "2.0.0", optional = true }
async-process = { version = "2.5.0", optional = true }

[features]
default = ["full"]

impl-smol = []
impl-tokio = ["dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
impl-futures = ["dep:futures"]

full = ["lock", "channel", "exec", "fs", "time", "net", "process"]
lock = ["tokio/sync", "dep:async-lock"]
channel = [
  "dep:futures-lite",
  "tokio/sync",
  "tokio-stream/sync",
  "dep:async-channel",
]
exec = [
  "tokio/rt-multi-thread",
  "futures/thread-pool",
  "tokio-util/rt",
  "dep:async-executor",
  "dep:async-io",
]
local-exec = [
  "tokio/rt",
  "futures/executor",
  "tokio-util/rt",
  "dep:async-executor",
  "dep:async-io",
]
fs = [
  "dep:futures-lite",
  "tokio/fs",
  "tokio-stream/fs",
  "tokio-util/compat",
  "dep:async-fs",
]
time = ["tokio/time", "tokio-stream/time", "dep:async-io"]
net = ["tokio/net", "tokio-stream/net", "dep:async-net"]
process = [
  "dep:futures-lite",
  "tokio/process",
  "tokio-util/compat",
  "dep:async-process",
]
