[package]
name = "byor"
version = "1.0.0-beta.2"
edition = "2024"
authors = ["Devin Droddy <devin@justdeeevin.dev"]
license = "MIT"
repository = "https://github.com/justdeeevin/byor"
description = "Bring your own runtime!"
readme = "README.md"
keywords = ["agnostic", "runtime", "tokio", "smol", "futures"]
categories = [
  "asynchronous",
  "concurrency",
  "filesystem",
  "network-programming",
  "rust-patterns",
]

[dependencies]
futures-lite = { version = "2.6.1", default-features = false, features = [
  "std",
], optional = true }

tokio = { version = "1.50.0", optional = true, features = [
  "sync",
  "rt-multi-thread",
  "rt",
  "fs",
  "time",
  "net",
  "process",
] }
tokio-util = { version = "0.7.18", default-features = false, optional = true, features = [
  "rt",
  "compat",
] }
tokio-stream = { version = "0.1.18", default-features = false, optional = true, features = [
  "sync",
  "fs",
  "time",
  "net",
] }

futures = { version = "0.3.32", default-features = false, optional = true, features = [
  "thread-pool",
  "executor",
] }

smol = { version = "2.0.2", optional = true }

[features]
default = ["full"]

smol = ["dep:smol"]
tokio = ["dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
futures = ["dep:futures"]

full = ["lock", "channel", "exec", "fs", "time", "net", "process"]
lock = []
channel = ["dep:futures-lite"]
exec = []
local-exec = []
fs = ["dep:futures-lite"]
time = []
net = []
process = ["dep:futures-lite"]
